--- a/checkout-sdk/build.gradle
+++ b/checkout-sdk/build.gradle
@@ -79,14 +79,20 @@ mavenPublishing {
             url = "https://github.com/hubtel/hubtel-mobile-android-checkout-sdk.git"
         }
     }
+
 }
+
 
 dependencies {
 //    implementation project(":network-kit")
 
     def hubtel_version = "1.0.7"
-    implementation "com.hubtel:core-ui:$hubtel_version"
-    implementation "com.hubtel:core-utils:$hubtel_version"
+    api ("com.hubtel:core-ui:$hubtel_version") {
+        transitive = true
+    }
+    api("com.hubtel:core-utils:$hubtel_version") {
+        transitive = true
+    }
 
     implementation "com.google.code.gson:gson:2.10.1"
 
