--- a/checkout-sdk/build.gradle
+++ b/checkout-sdk/build.gradle
@@ -5,7 +5,6 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'maven-publish'
-    id 'signing'
     id "com.vanniktech.maven.publish" version "0.25.3"
 }
 
@@ -127,13 +126,6 @@ afterEvaluate {
                 artifactId 'checkout-sdk'
                 version checkout_sdk_verison
             }
-
-            mavenJava(MavenPublication) {
-                signing {
-                    sign publishing.publications.mavenJava
-                }
-            }
-
         }
 
         repositories {
@@ -143,8 +135,13 @@ afterEvaluate {
                 credentials {
                     username "hubtel.mobile"
                     password "esvqpixbegyciftzbisk3ik3cyzrbwb6sacajdplv3zhmslusorq"
+
                 }
             }
         }
     }
+}
+
+tasks.withType(GenerateModuleMetadata).configureEach {
+    enabled = false
 }
