Reverted dependency type

--- a/checkout-sdk/build.gradle
+++ b/checkout-sdk/build.gradle
@@ -95,12 +95,8 @@ dependencies {
 //    implementation project(":network-kit")
 
     def hubtel_version = "1.0.7"
-    api ("com.hubtel:core-ui:$hubtel_version") {
-        transitive = true
-    }
-    api("com.hubtel:core-utils:$hubtel_version") {
-        transitive = true
-    }
+    implementation "com.hubtel:core-ui:$hubtel_version"
+    implementation "com.hubtel:core-utils:$hubtel_version"
 
     implementation "com.google.code.gson:gson:2.10.1"
 
