--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,16 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+mavenCentralUsername=mohammed.rahman
+mavenCentralPassword=gufKym-jihtox-qugvu2
+signing.keyId=32CBB7E8
+signing.password=gufKym-jihtox-qugvu2
+signing.secretKeyRingFile=/Users/albanybuipe/secring.gpg
+#ossrhUsername=mohammed.rahman
+#ossrhPassword=gufKym-jihtox-qugvu2
+#signing.gnupg.executable=gpg2
+#signing.gnupg.useLegacyGpg=false
+#signing.gnupg.homeDir=/Users/albanybuipe/.gnupg
+#signing.gnupg.optionsFile=gnupg-home/gpg.conf
+#signing.gnupg.keyName=32CBB7E8
+#signing.gnupg.passphrase=gufKym-jihtox-qugvu2
