--- a/build.gradle
+++ b/build.gradle
@@ -108,6 +108,9 @@ dependencies {
     // constraint layout
     implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
 
+    // Coil
+    implementation("io.coil-kt:coil-compose:1.3.2")
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
