updated compose compiler

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,7 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+#org.gradle.jvmargs=-Xmx1536m --illegal-access=permit
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
@@ -21,16 +22,9 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
-mavenCentralUsername=mohammed.rahman
-mavenCentralPassword=gufKym-jihtox-qugvu2
-signing.keyId=32CBB7E8
+mavenCentralUsername=Am2//7b9
+mavenCentralPassword=b6rCdoKAqkridOplp1/3Oz5YBIjlAcRfiFcNv6GRwFGJ
+signing.keyId=4D348868
 signing.password=gufKym-jihtox-qugvu2
-signing.secretKeyRingFile=/Users/albanybuipe/secring.gpg
-#ossrhUsername=mohammed.rahman
-#ossrhPassword=gufKym-jihtox-qugvu2
-#signing.gnupg.executable=gpg2
-#signing.gnupg.useLegacyGpg=false
-#signing.gnupg.homeDir=/Users/albanybuipe/.gnupg
-#signing.gnupg.optionsFile=gnupg-home/gpg.conf
-#signing.gnupg.keyName=32CBB7E8
-#signing.gnupg.passphrase=gufKym-jihtox-qugvu2
+signing.secretKeyRingFile=/Users/albanybuipe/.gnupg/secring.gpg
+
