--- a/checkout-sdk/build.gradle
+++ b/checkout-sdk/build.gradle
@@ -44,6 +44,9 @@ android {
         compose true
         buildConfig true
     }
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.5.7'
+    }
     kotlinOptions {
         jvmTarget = '1.8'
     }
