--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 
 android {
     namespace 'com.hubtel.merchant.checkout'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.hubtel.merchant.checkout"
         minSdk 24
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -48,10 +48,10 @@ android {
 
 dependencies {
 
-   // implementation project(":checkout-sdk")
+    implementation project(":checkout-sdk")
 //    implementation project(":network-kit")
     implementation 'androidx.activity:activity-ktx:1.7.2'
-    implementation "com.hubtel:merchant-checkout-sdk:1.0.4"
+   // implementation "com.hubtel:merchant-checkout-sdk:1.0.9"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
